--- a/scss/config/_internal.scss
+++ b/scss/config/_internal.scss
@@ -5,6 +5,7 @@
 // CSS Custom properties prefixes
 
 $animation-prefix: animation;
+$blur-prefix: blur;
 $color-prefix: color;
 $delay-prefix: delay;
 $font-family-prefix: font;
