--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -29,6 +29,7 @@ $_default-settings: (
   defaults: (
     accent: primary,
     border-width: 1,
+    blur: md,
     colors: 6,
     duration: normal,
     font-family: sans,
