--- a/scss/api/_shadow.scss
+++ b/scss/api/_shadow.scss
@@ -27,8 +27,12 @@ $_default-shadow: setting(defaults, shadow);
 //   Mixins
 // --------------------------------
 
-@mixin shadow($shadow: $_default-shadow) {
+@mixin shadow($shadow: $_default-shadow, $color: null) {
+  @if $color {
+    --koi-shadow-color: #{$color};
+  }
   --koi-shadow: #{shadow($shadow)};
+
   box-shadow: var(--koi-ring-offset-shadow, 0 0 #0000), var(--koi-ring-shadow, 0 0 #0000), var(--koi-shadow);
 }
 
