--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -50,6 +50,7 @@ body {
 .my-box-1 {
   background: var(--gradient-10);
   color: koi.fill(black);
+  animation: var(--animation-shake-x);
 
   @include koi.dark-mode {
     background-color: koi.fill(danger, 9, 0.25);
@@ -60,6 +61,7 @@ body {
   // --koi-gradient-direction: 100deg;
   background: koi.gradient(9);
   color: koi.fill(black);
+  animation: var(--animation-shake-x);
 
   @include koi.dark-mode {
     background-color: koi.fill(primary, 9, 0.25);
@@ -70,6 +72,7 @@ body {
   // --koi-gradient-direction: 100deg;
   background: koi.gradient(5);
   color: koi.fill(black);
+  animation: var(--animation-shake-x);
 
   @include koi.dark-mode {
     background-color: koi.fill(primary, 9, 0.25);
