--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,7 +17,7 @@ $selectors: selector.parse(
 );
 
 // Theming
-$btn-border-radius: radius(md);
+$btn-border-radius: radius(lg);
 $btn-font-size: font(sm);
 $btn-font-weight: font(medium);
 $btn-leading: text-leading(sm);
