--- a/scss/api/_shadow.scss
+++ b/scss/api/_shadow.scss
@@ -20,7 +20,7 @@ $_default-shadow: setting(defaults, shadow);
 /// @return {any} `$shadow-value`.
 ///
 @function shadow($shadow: $_default-shadow) {
-  @return theme(shadow, $shadow);
+  @return theme-or-fallback(shadow, $shadow);
 }
 
 // --------------------------------
@@ -31,6 +31,7 @@ $_default-shadow: setting(defaults, shadow);
   @if $color {
     --koi-shadow-color: #{$color};
   }
+
   --koi-shadow: #{shadow($shadow)};
 
   box-shadow: var(--koi-ring-offset-shadow, 0 0 #0000), var(--koi-ring-shadow, 0 0 #0000), var(--koi-shadow);
