--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,4 +1,11 @@
+@forward 'button' as button-*;
+@forward 'card' as card-*;
+@forward 'keyboard' as keyboard-*;
+@forward 'loader' as loader-*;
+@forward 'navbar' as navbar-*;
+
 @use 'button';
+@use 'card';
 @use 'keyboard';
 
 @mixin components {
