--- a/scss/config/_theme.scss
+++ b/scss/config/_theme.scss
@@ -5,18 +5,18 @@
 @use 'sass:map';
 
 @use '../tokens';
-@use 'typography';
-@use 'colors';
+@use 'theme/colors';
+// @use 'typography';
 
 // ---- Typography ----
 
-$font-family: map.merge(
-  (
-    base: typography.$base-font-family,
-    headings: typography.$headings-font-family,
-  ),
-  tokens.$font-family
-);
+// $font-family: map.merge(
+//   (
+//     base: typography.$base-font-family,
+//     headings: typography.$headings-font-family,
+//   ),
+//   tokens.$font-family
+// );
 
 // ---- Theme ----
 
@@ -34,7 +34,8 @@ $default-theme: (
   spacing: tokens.$spacing,
   sizes: tokens.$sizes,
   timing: tokens.$timing,
-  font-family: $font-family,
+  // font-family: $font-family,
+  font-family: tokens.$font-family,
   font-size: tokens.$font-size,
   font-weight: tokens.$font-weight,
   leading: tokens.$leading,
