--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -1,10 +1,10 @@
 // --------------------------------
-//   Colors Configuration (vars)
+//    Theme Colors
 // --------------------------------
 
 @use 'sass:map';
 
-@use '../tokens' as *;
+@use '../../tokens' as *;
 
 // ---- Base Colors ----
 
@@ -58,6 +58,11 @@ $base: (
 
 $schemes: (
   light: (
+    contrast: (
+      1: map.get($colors, black),
+      2: map.get($colors, grey, 8),
+      3: map.get($colors, grey, 6),
+    ),
     surface: (
       1: map.get($colors, grey, 0),
       2: map.get($colors, white),
@@ -76,6 +81,11 @@ $schemes: (
     ),
   ),
   dark: (
+    contrast: (
+      1: map.get($colors, white),
+      2: map.get($colors, grey, 1),
+      3: map.get($colors, grey, 3),
+    ),
     surface: (
       1: map.get($colors, grey, 9),
       2: map.get($colors, grey, 8),
