--- a/scss/config/_layout.scss
+++ b/scss/config/_layout.scss
@@ -2,6 +2,6 @@
 //   Layout Configuration (vars)
 // --------------------------------
 
-$fluid-padding-min: 0.75rem;
-$fluid-padding-max: 1.5rem;
-$fluid-padding-value: 5%;
+$fluid-padding-min: 0.75rem !default;
+$fluid-padding-max: 1.5rem !default;
+$fluid-padding-value: 5% !default;
