--- a/scss/config/_utilities.scss
+++ b/scss/config/_utilities.scss
@@ -2,5 +2,5 @@
 //   Utilities Configuration (vars)
 // ---------------------------------
 
-$utility-use-important: false;
-$utility-glue: ':';
+$utility-use-important: false !default;
+$utility-glue: ':' !default;
