--- a/scss/helpers/_list.scss
+++ b/scss/helpers/_list.scss
@@ -4,6 +4,10 @@
 
 @use 'sass:list';
 
+// --------------------------------
+//   Functions
+// --------------------------------
+
 @function prepend($list, $value) {
   @return list.join($value, $list);
 }
