--- a/scss/helpers/_map.scss
+++ b/scss/helpers/_map.scss
@@ -7,6 +7,10 @@
 @use 'sass:list';
 @use 'sass:string';
 
+// --------------------------------
+//   Functions
+// --------------------------------
+
 @function get-key($map: (), $fallback-key: null, $keys...) {
   @if list.length($keys) == 0 and $fallback-key {
     @if map.has-key($map, $fallback-key) {
