--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,6 +1,6 @@
 @forward 'config';
 @forward 'helpers';
-@forward 'api';
+// @forward 'api';
 @forward 'base';
 @forward 'components';
 @forward 'utilities';
