--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,15 +17,15 @@ $selectors: selector.parse(
 );
 
 // Theming
-$btn-border-radius: radius(lg);
-$btn-font-size: font(sm);
-$btn-font-weight: font(medium);
-$btn-leading: text-leading(sm);
-$btn-padding-x: spacing(16);
-$btn-padding-y: spacing(8);
-$btn-shadow: shadow(xs);
-$btn-tracking: tracking(wide);
-$btn-text-case: capitalize;
+$border-radius: radius(lg) !default;
+$font-size: font(sm) !default;
+$font-weight: font(medium) !default;
+$leading: text-leading(sm) !default;
+$padding-x: spacing(16) !default;
+$padding-y: spacing(8) !default;
+$shadow: shadow(xs) !default;
+$tracking: tracking(wide) !default;
+$text-transform: capitalize !default;
 
 // --------------------------------
 //   Mixins
@@ -64,21 +64,21 @@ $btn-text-case: capitalize;
   align-items: var(--koi-btn-align-items, center);
   background-color: var(--koi-btn-background, fill(surface, 2));
   border-color: var(--koi-btn-border-color, fill(border, 2));
-  border-radius: var(--koi-btn-border-radius, $btn-border-radius);
+  border-radius: var(--koi-btn-border-radius, $border-radius);
   border-style: var(--koi-btn-border-style, solid);
   border-width: var(--koi-btn-border-width, 1px);
-  box-shadow: var(--koi-btn-shadow, $btn-shadow);
+  box-shadow: var(--koi-btn-shadow, $shadow);
   color: var(--koi-btn-foreground, fill(text, 2));
   display: var(--koi-btn-display, inline-flex);
-  font-size: var(--koi-btn-font-size, $btn-font-size);
-  font-weight: var(--koi-btn-font-weight, $btn-font-weight);
+  font-size: var(--koi-btn-font-size, $font-size);
+  font-weight: var(--koi-btn-font-weight, $font-weight);
   gap: var(--koi-btn-gap, 1ch);
   justify-content: var(--koi-btn-justify-content, center);
-  letter-spacing: var(--koi-btn-tracking, $btn-tracking);
-  line-height: var(--koi-btn-leading, $btn-leading);
-  padding: var(--koi-btn-padding-y, $btn-padding-y) var(--koi-btn-padding-x, $btn-padding-x);
+  letter-spacing: var(--koi-btn-tracking, $tracking);
+  line-height: var(--koi-btn-leading, $leading);
+  padding: var(--koi-btn-padding-y, $padding-y) var(--koi-btn-padding-x, $padding-x);
   text-align: var(--koi-btn-text-align, center);
-  text-transform: var(--koi-btn-text-case, $btn-text-case);
+  text-transform: var(--koi-btn-text-case, $text-transform);
 
   &:hover {
     @include shadow(var(--koi-btn-shadow-hover, shadow(sm)));
